Remove width from projects to stop overflow

--- a/assets/css/projects.scss
+++ b/assets/css/projects.scss
@@ -7,8 +7,6 @@
 }
 
 .project-summary, .project-full{
-    width: 100%;
-
     & h3 {
         margin: 0;
     }
